[nir][radv] more undefined shifts caught by gcc's sanitizer
On Mesa a2c30c14 + !12719 (merged) there are still more undefined shifts caught by gcc with -fsanitize=undefined when replaying some fossilize archives with RADV.
With the archive from the game 'Splitgate':
mesa/src/compiler/nir/nir_lower_tex.c:1250:35: runtime error: shift exponent 32 is too large for 32-bit type 'unsigned int'
Foz archive: https://drive.google.com/file/d/1wWby7bbSxJzjoGrtQ6kNksDpMf0hgtoD/view?usp=sharing
With the archive from 'Resident Evil: Village':
mesa/src/compiler/nir/nir_lower_subgroups.c:321:4: runtime error: left shift of negative value -1
Foz archive: https://drive.google.com/file/d/1iSqA546nCvt4zefE5SctGcvHgyTyqUfX/view?usp=sharing